Fixing header line height and image width on mobile

--- a/sass/custom/_base.scss
+++ b/sass/custom/_base.scss
@@ -60,6 +60,7 @@ em {
 article h1 {
   font-size: 2.3rem;
   margin-bottom: 10px;
+  line-height: 3.2rem;
 }
 article {
   margin-bottom: 40px;
@@ -99,7 +100,7 @@ article, .comments {
   img {
     max-width: 500px;
     @media screen and (max-width: $break) {
-      max-width: 240px;
+      max-width: 298px;
     }
   }
   .alt {
@@ -129,8 +130,3 @@ article, .comments {
     }
   }
 }
-
-
-
-
-
